# nutriscan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  README.md  manage.py
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_daily_calorie_goal.py  0003_user_data_consent.py
backend/config/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/db/: README.md  load_nutrition.py  nutrition_map.yaml  schema.sql
backend/db/seeds/: ifct_foods.csv  usda_foods.csv
backend/logs/: models.py  serializers.py  urls.py  views.py
backend/logs/migrations/: 0001_initial.py  0002_meallog_carbs_g_meallog_fat_g_meallog_protein_g.py  0003_alter_meallog_carbs_g_alter_meallog_fat_g_and_more.py
backend/nutrition/: models.py  off.py  resolver.py  serializers.py  urls.py  views.py
backend/nutrition/management/commands/: seed_nutrition.py
backend/nutrition/migrations/: 0001_initial.py
backend/scans/: inference_client.py  models.py  serializers.py  urls.py  views.py
backend/scans/migrations/: 0001_initial.py
backend/tests/: test_auth.py  test_feedback_history.py  test_health.py  test_product.py  test_scan.py
docs/: BUILD_PLAN.md  DEPLOY.md  SRS.md
docs/design/: DESIGN.md
inference/: Dockerfile  README.md  app.py  benchmark.json  benchmark.py  detector.py  export_onnx.py  model.py  preprocess.py  quantize.py
inference/models/: classes.json
infra/: Dockerfile  README.md
ml/: README.md  clean_scraped.py  export_detector.py  labels.yaml  pack_dataset.py  prepare_data.py  scrape_backfill.py  train_baseline.py  train_finetune.py
ml/manifests/: dataset_v1.json  test_v1.csv  val_v1.csv
ml/metrics/: baseline_v1.json
ml/notebooks/: 01_data_audit.ipynb  train_finetune_colab.ipynb
mobile/: App.tsx  README.md  app.json  config.ts  package-lock.json  package.json
mobile/api/: auth.ts  client.ts  log.ts  product.ts  scan.ts
mobile/auth/: AuthProvider.tsx  storage.ts
mobile/components/: AppText.tsx  BrandMark.tsx  Button.tsx  CalorieRing.tsx  Card.tsx  Chip.tsx  Input.tsx  ProductSheet.tsx  ScanResultSheet.tsx
mobile/lib/: format.ts
mobile/navigation/: AuthStack.tsx  MainTabs.tsx  RootNavigator.tsx  types.ts
mobile/screens/: DesignSystemScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  Placeholder.tsx  ProfileScreen.tsx  RegisterScreen.tsx  ScanScreen.tsx  SplashScreen.tsx
mobile/theme/: ThemeProvider.tsx  tokens.ts
scripts/: demo.ps1  demo.sh  smoke_test.sh
tests/: test_inference_app.py  test_inference_detector.py  test_inference_multiitem.py  test_inference_preprocess.py  test_nutrition.py  test_prepare_data.py  test_sanity.py  test_train_baseline.py  test_train_finetune.py
