[project]
name = "nutriscan"
version = "0.1.0"
description = "Point. Scan. Know. — AI-powered food recognition and calorie estimation for Indian cuisine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pre-commit>=4.0",
    "pymysql>=1.2.0",
    "types-pymysql>=1.1.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
]
ml = [
    "jupyter>=1.1",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pillow>=11.0",
    "pyyaml>=6.0",
    "kaggle>=1.6",
    "tqdm>=4.66",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
