[project]
name = "nutriscan"
version = "0.1.0"
description = "Point. Scan. Know. — AI-powered food recognition and calorie estimation for Indian cuisine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "fastapi>=0.139.2",
    "onnxruntime>=1.19",
    "pillow>=12.3.0",
    "pymysql>=1.2.0",
    "python-multipart>=0.0.32",
    "types-pymysql>=1.1.0.20260518",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0.12.20260518",
    "imagehash>=4.3.2",
    "ddgs>=9.14.4",
    "requests>=2.34.2",
    "types-requests>=2.33.0.20260712",
    "torch>=2.13.0",
    "open-clip-torch>=3.3.0",
    "mlflow>=3.14.0",
    "pytest-django>=4.12.0",
    "django-stubs[compatible-mypy]>=6.0.7",
    "djangorestframework-stubs>=3.17.0",
    "onnx>=1.22.0",
]
ml = [
    "jupyter>=1.1",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pillow>=11.0",
    "pyyaml>=6.0",
    "kaggle>=1.6",
    "tqdm>=4.66",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency markers are meant to be called in argument defaults.
extend-immutable-calls = ["fastapi.File", "fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]
mypy_path = "backend"

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
pythonpath = ["backend"]
DJANGO_SETTINGS_MODULE = "config.settings"
